2010-05-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Dom/CSharpAmbience.cs: Fixed 'Bug 606506
	  - Types of fields are not shown'

2010-05-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	* MonoDevelop.CSharp.Completion/EventCreationCompletionData.cs:
	  Fixed 'Bug 606212 - Allow delegate renaming straight after
	  creation'.

2010-05-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	  Implemented 'Bug 606227 - Search reodering not available for
	  "override" completions.'.


2010-05-17  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.CSharp.Highlighting/HighlightUsagesExtension.cs:
	  Unsubscribe editor events.

2010-05-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Highlighting/HighlightUsagesExtension.cs:
	  catch exception in highighit usages extension.

2010-05-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Formatting/CSharpTextEditorIndentation.cs:
	  Fixed 'Bug 606217 - Auto-placed semi-colon doesn't take
	  account of comments'

2010-05-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	  Fixed 'Bug 606048 - Parameter insight re-shows on every
	  newline even when disabled'.

2010-05-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/ResolveVisitor.cs: Fixed 'Bug
	  605235 - Inaccessible functions do not show "Goto
	  Declaration" in context menu'.

2010-05-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	  Fixed 'Bug 604593 - Autocomplete list sorting wrong when
	  grouping by class.'.

2010-05-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/NRefactoryParameterDataProvider.cs:
	  fixed 'Bug 605134 - NRE when using (an abstract class ctor?)
	  MulticastDelegate ctor'.

2010-05-12  Mike Krüger  <mkrueger@novell.com>
